--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
